--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
   </head>
   <body>
 
-    <!-- Navigation -->
-    <div id="leftnavigation">
-      <h1>Left Column</h1>
-      <ul>
-	<li><a href="">Home</a></li>
-	<li><a href="">Extra link</a></li>
-	<li><a href="">Another link</a></li>
-      </ul>
-    </div>
-
-    <div id="content">
-      <h1>Homepage for pyg3t and PoProofRead</h1>
-      
+    <div id="container">
+      <div id="top">
+	<h1>Homepage for pyg3t and PoProofRead</h1>
+      </div>
+      <div id="leftnav">
+	<p>
+	  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.
+	</p>
+      </div>
+      <div id="content">
+	<h2>Subheading</h2>
+	<p>
+	  Content
+	</p>
+      </div>
+      <div id="footer">
       <address>
 	<a href="mailto:k.nielsen81@gmail.com">Kenneth Nielsen</a>
 	<a href="mailto:asklarsen@gmail.com">Ask Hjorth Larsen</a>
       </address>
+      </div>
     </div>
+    
   </body>
 </html>
+
+
